# todolist-greenole

./: .env-sample  .gitignore  LICENSE  README.md  pyproject.toml  schema.yml
config/: settings.py  urls.py
todo/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
todo/migrations/: 0001_initial.py  0002_alter_todo_created_at.py  0003_alter_todo_options.py
todo/tests/: test_request.py  test_response.py  test_serializers.py
